--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,5 +26,4 @@ jobs:
                 if: github.ref == 'refs/heads/main'
                 run: biolib push $BIOLIB_PROJECT_URI
                 env:
-                    BIOLIB_EMAIL: ${{ secrets.BIOLIB_EMAIL }}
-                    BIOLIB_PASSWORD: ${{ secrets.BIOLIB_PASSWORD }}
+                    BIOLIB_TOKEN: ${{ secrets.BIOLIB_TOKEN }}
